# DirectX

./: .clang-format  .gitignore  README.md
AsteroiDoom/: CMakeLists.txt
AsteroiDoom/assets/xcfs/: Asteroid20.xcf  Projectile.xcf
AsteroiDoom/src/: AsteroiDoomConstants.h  BitmapUtils.h  DirectX2DUtils.cpp  DirectX2DUtils.h  GameController.cpp  GameController.h  WinMain.cpp  WinMain.h
AsteroiDoom/src/collidable/: Arena.cpp  Arena.h  CollidableObject.cpp  CollidableObject.h  Projectile.h  Spaceship.h
AsteroiDoom/src/collidable/base/: CollidableObject.cpp  CollidableObject.h  DamagableObject.cpp  DamagableObject.h  DamagingObject.cpp  DamagingObject.h
AsteroiDoom/src/collidable/specific/: Projectile.cpp  Projectile.h  Spaceship.cpp  Spaceship.h
AsteroiDoom/src/utils/: AsteroiDoomConstants.h
BouncingBalls/: CMakeLists.txt
BouncingBalls/src/: WinMain.cpp
Clock/: CMakeLists.txt
Clock/src/: DirectX2DHelper.cpp  DirectX2DHelper.h  WinMain.cpp
Direct2D/AsteroiDoom/: CMakeLists.txt
Direct2D/AsteroiDoom/assets/xcfs/: Asteroid30.xcf  Projectile.xcf  Spaceship.xcf
Direct2D/AsteroiDoom/src/: DirectX2DUtils.cpp  DirectX2DUtils.h  WinMain.cpp  WinMain.h
Direct2D/AsteroiDoom/src/collidable/: Arena.cpp
Direct2D/AsteroiDoom/src/collidable/base/: CollidableObject.cpp  DamagableObject.cpp  DamagableObject.h
Direct2D/AsteroiDoom/src/collidable/specific/: Asteroid.cpp  Asteroid.h  Spaceship.cpp
Direct2D/AsteroiDoom/src/utils/: AsteroiDoomConstants.h  BitmapUtils.cpp  Random.cpp  Random.h  TextUtils.cpp  TextUtils.h
Direct2D/BouncingBalls/src/: WinMain.cpp  WinMain.h
Direct2D/Clock/: CMakeLists.txt
Direct2D/Clock/src/: DirectX2DHelper.cpp  DirectX2DHelper.h
Direct2D/GooglyEyes/: CMakeLists.txt
Direct2D/GooglyEyes/src/: WinMain.h
Direct2D/RotatingNet/: CMakeLists.txt
Direct2D/RotatingNet/src/: DirectX2DHelper.cpp  WinMain.cpp  WinMain.h
Direct3D/First/: CMakeLists.txt
Direct3D/First/src/: DirectX2DHelper.cpp  DirectX3DHelper.cpp  DirectX3DHelper.h  VertexShader.hlsl  vertex_shader.h
Direct3D/Scene/: CMakeLists.txt
Direct3D/Scene/assets/blends/: Scene.blend
Direct3D/Scene/assets/xcfs/: Donut.xcf  TestAsset.xcf
Direct3D/Scene/src/: DirectX3DHelper.cpp  DirectX3DHelper.h  PixelShader.hlsl  VertexShader.hlsl  WinMain.cpp  vertex_shader.h
Direct3D/Tree/: CMakeLists.txt
Direct3D/Tree/src/: DirectX3DHelper.cpp  DirectX3DHelper.h  WinMain.h  vertex_shader.h
GooglyEyes/: CMakeLists.txt
GooglyEyes/src/: DirectX2DHelper.cpp  DirectX2DHelper.h  WinMain.cpp  WinMain.h
RotatingNet/: CMakeLists.txt
RotatingNet/src/: DirectX2DHelper.cpp  DirectX2DHelper.h  WinMain.cpp
